<resources>
    <!-- Inicio Sesion -->
    <string name="app_name">Painal</string>
    <string name="emailHint">Correo o Usuario</string>
    <string name="passHint">Contraseña</string>
    <string name="loginBtn">Iniciar Sesión</string>
    <string name="eres_nuevo_registrate">¿Eres nuevo? Registrate</string>
    <string name="forgot">Recuperar Contraseña</string>
    <string name="loading">Cargando</string>

    <!-- Home -->
    <string name="entregar_en">Entregar en:</string>
    <string name="buscador">Buscador</string>

    <!-- Menu -->
    <string name="inicio">Inicio</string>
    <string name="pedidos">Carrito</string>
    <string name="config">Configuración</string>
    <string name="pedido">Pedidos</string>

    <!-- Mensajes error -->
    <string name="msgErrorUser">Usuario requerido</string>
    <string name="msgErrorPass">Contraseña requerida</string>
    <string name="msgErrorLogin">Verifique datos</string>
    <string name="msgErrorWSLogin">Servicio no disponible</string>
    <string name="msgErrorEmail">Correo requerido</string>

    <!-- Registro -->
    <string name="registro">REGISTRO</string>
    <string name="nombreHint">Nombre</string>
    <string name="apellidoPHint">Apellido Paterno</string>
    <string name="apellidoMHint">Apellido Materno</string>
    <string name="correoHint">Correo electronico</string>
    <string name="passwordHint">Contraseña</string>
    <string name="telefonoHint">Telefono Celular</string>
    <string name="registroBtn">Registrarte</string>


    <!-- Recupera contraseña -->
    <string name="recuperaCon">RECUPERA CONTRASEÑA</string>
    <string name="btnConsulta">Recupera Contraseña</string>

    <!-- Menu -->
    <string name="menu">MENU</string>
    <string name="perfil">PERFIL</string>
    <string name="contacto2">CONTACTO</string>
    <string name="family">FAMILY</string>
    <string name="referidos">REFERIDOS</string>


    <!-- Crea contacto -->
    <string name="contacto">REGISTRO DE CONTACTO</string>
    <string name="titlecontacto">CONTACTOS</string>
    <string name="obs">Observaciones</string>

    <!-- Perfil -->
    <string name="titlePerfil">PERFIL</string>
    <string name="actPeril">ACTUALIZA PERFIL</string>
    <string name="editaDatos">EDITA DATOS</string>
    <string name="direccion">DIRECCIONES</string>
    <string name="question">¿Esta seguro de Eliminar el registro?</string>


    <!-- Family -->
    <string name="titleFamily">CLIENTES AUTORIZADOS</string>
    <string name="titleFam">REGISTRO DE CLIENTES AUTORIZADOS</string>
    <string name="descFamily">Personas que pueden pedir con tu cuenta</string>
    <string name="edad">Edad</string>
    <string name="parentesco">Parentesco</string>
    <string name="sw1">Solicita Autorizacion</string>
    <string name="btnFamily">Guardar</string>
    <string name="nombre">Nombre:</string>
    <string name="edadN">de</string>
    <string name="solAuto">Autorizacion?:</string>
    <string name="parentescoN">años</string>
    <string name="actAuto">ACTUALIZA CLIENTES AUTORIZADOS</string>

    <!-- Referidos  -->
    <string name="titleRef">REFERIDOS</string>
    <string name="regRef">REGISTRO DE REFERIDOS</string>
    <string name="agregar">Agregar</string>
    <string name="sw">Esta Afiliado</string>
    <string name="btnReferir">Guardar</string>
    <string name="afiliado">Es Afiliado?</string>
    <string name="actRef">ACTUALIZA REFERIDOS</string>
    <string name="act">Actualiza</string>
    <string name="apellidos">Apellidos</string>
    <string name="saldo">SALDO</string>


    <!-- Evaluacion Proveedor-productos  -->
    <string name="title1">EVALUACION AL PROVEEDOR</string>
    <string name="btnEvaluar">ENVIAR</string>

    <!-- Evaluacion Titlani  -->
    <string name="title2">EVALUACION AL  TITLANI</string>

    <!-- Pedidos  -->
    <string name="ped">INFORMACION DEL PEDIDO</string>
    <string name="historico">HISTORICO DEL PEDIDO</string>
    <string name="detalleH">DETALLE DEL PEDIDO</string>
    <string name="seguimiento">SEGUIMIENTO DEL PEDIDO</string>
    <string name="titlaniAsig">TITLANI ASIGNADO</string>

    <!-- Historico de Pedidos  -->
    <string name="numPedido">Número de Pedido</string>
    <string name="fecPedido">Fecha de Pedido</string>
    <string name="EstatusPedido">Estatus de Pedido</string>
    <string name="totalPedido">Total del Pedido</string>

    <!-- Detalle Histo  de Pedidos  -->
    <string name="articulo">Articulo</string>
    <string name="observacion">Observacion</string>
    <string name="cant">Cantidad</string>
    <string name="precio">Precio</string>
    <string name="desc">Descuento</string>
    <string name="total">Total</string>


    <string name="artDif">Art Dif</string>

    <!--Datos TC-->
    <string name="nombreT">NOMBRE QUE APARECE EN LA TARJETA</string>
    <string name="numetoTC">NUMERO DE TAJETA</string>
    <string name="mesTC">MES</string>
    <string name="yearTC">AÑO</string>
    <string name="segTC"></string>

</resources>
